--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
         <module>nativeconfigserver</module>
         <module>nativeconfigclient</module>
         <module>configserver</module>
+        <module>untitled</module>
+        <module>configclient</module>
     </modules>
 
     <parent>
